categories multiselect and main news history refrence bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
 
 
     <!-- Settings -->
-    <string name="settings_all_label">All</string>
+    <string name="settings_all_label">All CATEGORIES</string>
     <string name="settings_entertainment_label">娱乐</string>
     <string name="settings_military_label">军事</string>
     <string name="settings_education_label">教育</string>
